--- a/key.html
+++ b/key.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Key generator with real-time clock and date display">
-    <meta name="author" content="Nguyễn Duy Khánh">
+    <meta name="author" content="NVL MEDIA">
     <title>Key Generator | Real-time</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
